force-app/main/default/objects/Joint_Inspection__c/Joint_Inspection__c.object-meta.xml
<CustomObject>
    <label>Joint Inspection</label>
    <nameField>
        <displayFormat>JINS-{00000}</displayFormat>
        <label>Joint Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joint Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>