force-app/main/default/objects/Joint_Inspection__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <label>Joint Inspection Cancelled Date</label>
    <type>DateTime</type>
</CustomField>