force-app/main/default/objects/Joint_Inspection__c/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Joint Inspection Cancelled Reason</label>
    <type>TextArea</type>
</CustomField>