force-app/main/default/objects/Joint_Inspection__c/fields/CSR_Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>CSR_Responded_Date__c</fullName>
    <label>CSR Responded Date</label>
    <type>DateTime</type>
</CustomField>