force-app/main/default/objects/Joint_Inspection__c/fields/CSR_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CSR_Sent_Date__c</fullName>
    <label>CSR Sent Date</label>
    <type>DateTime</type>
</CustomField>