force-app/main/default/objects/Joint_Inspection__c/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <label>CSR Customer Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>