force-app/main/default/objects/Joint_Inspection__c/fields/Invite_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Invite_Sent_Date_Time__c</fullName>
    <label>Invite Sent Date Time</label>
    <type>DateTime</type>
</CustomField>