force-app/main/default/objects/Joint_Inspection__c/fields/Is_Responded__c.field-meta.xml
<CustomField>
    <fullName>Is_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Responded</label>
    <type>Checkbox</type>
</CustomField>