force-app/main/default/objects/Joint_Inspection__c/fields/Joint_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Joint_Inspection_Date__c</fullName>
    <label>Joint Inspection Scheduled Date</label>
    <type>DateTime</type>
</CustomField>