force-app/main/default/objects/Joint_Inspection__c/fields/Rescheduled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Reason__c</fullName>
    <label>Rescheduled Reason</label>
    <type>TextArea</type>
</CustomField>